<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PhonePpgActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/phonePpgFragmentLayout">

    <TextView
        android:id="@+id/ppgMainDescription"
        android:text="@string/ppgMainDescription"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/camera"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/camera"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/ppg_camera_and_flashlight"
        android:src="@drawable/camera"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ppgMainDescription" />

    <ImageView
        android:id="@+id/finger"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ppg_finger"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/finger"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ppgMainDescription" />


    <TextView
        android:id="@+id/ppgMeasurementStatus"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:padding="@dimen/fab_margin"
        android:text="@string/ppg_not_started"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/startButton"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@id/ppgMeasurementStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.AppBarLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

        <Toolbar
            android:id="@+id/toolbar"
            app:title="PPG measurement"
            android:background="?attr/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
